[gd_scene load_steps=12 format=2]

[ext_resource path="res://Panel_StyleBox.tres" type="StyleBox" id=1]
[ext_resource path="res://RetroTheme.tres" type="Theme" id=2]
[ext_resource path="res://Images/Windows_Logo_(1992-2001).svg.png" type="Texture" id=3]
[ext_resource path="res://Images/pngfind.com-email-icons-png-2023381.png" type="Texture" id=4]
[ext_resource path="res://Desktop/EmailButton.gd" type="Script" id=5]
[ext_resource path="res://Images/80-805682_notification-badge-icon-png-transparent-png.png" type="Texture" id=6]
[ext_resource path="res://RetroFont_Black.tres" type="DynamicFont" id=7]
[ext_resource path="res://Desktop/Clock.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.682353, 0.682353, 0.682353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.682353, 0.682353, 0.682353, 1 )
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 1

[sub_resource type="CircleShape2D" id=3]
radius = 44.0

[node name="Control" type="Node"]

[node name="DesktopGraphic" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="DesktopGraphic"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Taskbar" type="Panel" parent="DesktopGraphic"]
margin_top = 572.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DesktopGraphic/Taskbar"]
margin_right = 96.0
margin_bottom = 28.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DesktopGraphic/Taskbar"]
anchor_left = -0.00195313
anchor_top = -0.333333
anchor_right = -0.00195313
anchor_bottom = -0.333333
margin_left = 31.0
margin_top = 16.0
margin_right = 91.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="DesktopGraphic/Taskbar"]
position = Vector2( 14.6154, 14 )
scale = Vector2( 0.0173077, 0.0173077 )
texture = ExtResource( 3 )

[node name="Clock" type="Label" parent="DesktopGraphic"]
margin_left = 933.0
margin_top = 580.0
margin_right = 1020.0
margin_bottom = 601.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 992, 32 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( -31.999, 32 )
scale = Vector2( 0.0737649, 0.0737649 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -32, 32 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="Area2D"]
margin_left = -68.0
margin_top = 81.0
margin_right = 6.0
margin_bottom = 99.0
theme = ExtResource( 2 )
text = "E-MAIL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Area2D"]
scale = Vector2( 0.0736746, 0.0736746 )
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 10.0

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_Area2D_mouse_exited"]
